--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@ limitations under the License.
     <irclib.version>1.10</irclib.version>
     <jersey.version>1.8</jersey.version>
     <jetty.version>9.4.38.v20210224</jetty.version>
+    <jdom.version>1.1.3</jdom.version>
     <joda-time.version>2.9.9</joda-time.version>
     <junit.version>4.13.2</junit.version>
     <kafka.version>2.4.1</kafka.version>
@@ -1749,6 +1750,12 @@ limitations under the License.
             <artifactId>slf4j-log4j12</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jdom</groupId>
+        <artifactId>jdom</artifactId>
+        <version>${jdom.version}</version>
       </dependency>
 
     </dependencies>
