--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@ limitations under the License.
     <commons-lang.version>2.5</commons-lang.version>
     <curator.version>5.1.0</curator.version>
     <derby.version>10.14.1.0</derby.version>
+    <dropwizard-metrics.version>4.1.18</dropwizard-metrics.version>
     <elasticsearch.version>0.90.1</elasticsearch.version>
     <fasterxml.jackson.version>2.9.10</fasterxml.jackson.version>
     <fest-reflect.version>1.4</fest-reflect.version>
@@ -1756,6 +1757,12 @@ limitations under the License.
         <groupId>org.jdom</groupId>
         <artifactId>jdom</artifactId>
         <version>${jdom.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-core</artifactId>
+        <version>${dropwizard-metrics.version}</version>
       </dependency>
 
     </dependencies>
