--- a/flume-ng-sinks/pom.xml
+++ b/flume-ng-sinks/pom.xml
@@ -38,10 +38,26 @@ limitations under the License.
     <module>flume-ng-elasticsearch-sink</module>
     <module>flume-ng-morphline-solr-sink</module>
     <module>flume-ng-kafka-sink</module>
-    <module>flume-ng-kudu-sink</module>
     <module>flume-http-sink</module>
     <module>flume-dataset-sink</module>
     <module>flume-hive-sink</module>
   </modules>
+
+  <profiles>
+    <profile>
+      <id>x86_64</id>
+      <activation>
+        <os>
+          <arch>amd64</arch>
+        </os>
+      </activation>
+      <modules>
+        <!-- kudu-binary.jar is available only for x86_64 systems
+        https://issues.apache.org/jira/browse/KUDU-3264
+        -->
+        <module>flume-ng-kudu-sink</module>
+      </modules>
+    </profile>
+  </profiles>
 
 </project>
