Use Ubuntu 18.04 for AMD64

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
   include:
     - name: "Linux amd64"
       arch: amd64
-      dist: trusty
+      dist: bionic
     - name: "Linux aarch64"
       arch: arm64-graviton2
       dist: focal
