--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,4 @@ before_install:
 install: true
 
 script:
-  - MAVEN_OPTS="-Xms512m -Xmx1024m" ./mvnw clean install -B -fae
+  - MAVEN_OPTS="-Xms1024m -Xmx1024m" ./mvnw verify -B -fae
