--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,4 @@ before_install:
 install: true
 
 script:
-  - MAVEN_OPTS="-Xms1024m -Xmx1024m" ./mvnw verify --quiet --fail-fast --threads 1.0C
+  - MAVEN_OPTS="-Xms1024m -Xmx1024m" ./mvnw verify --quiet --fail-fast
